<resources>
    <string name="app_name">Secret Service</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="member_token">Your token is available on <font color="#ce3d96"><u>secret-service.be</u></font> section SMS</string>
    <string name="recording_notice">By clicking on the alert button, I am informed that the audio recorder is activated until the end of the alert, thanks to the AccessibilityService API. Recording only operates when this screen is open. Audio recordings are shared through a web page with the contacts selected in your list of guardian angels.</string>
</resources>