<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activities.SetTimerActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/logo_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="SET TIME"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/round_play_arrow_24"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/text_color"
                    android:padding="12dp"
                    android:text="Run By Time"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/timeActivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="12dp"
                    android:paddingLeft="15dp"
                    android:text="activate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="From"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fromTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="12dp"
                    android:text="00:00"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="to"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="12dp"
                    android:text="00:00"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                android:background="@color/text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/round_play_arrow_24"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/text_color"
                    android:padding="12dp"
                    android:text="Run By Date"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/dateActivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="12dp"
                    android:paddingLeft="10dp"
                    android:text="activate" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:text="From"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fromDayStart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:padding="12dp"
                            android:text="dd/MM/YYY"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:text="at"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fromTimeStart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:padding="12dp"
                            android:text="00:00"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:text="To"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fromDayEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:padding="12dp"
                            android:text="dd/MM/YYY"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text="at"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fromTimeEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:padding="12dp"
                            android:text="00:00"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                android:background="@color/text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/round_play_arrow_24"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/text_color"
                    android:padding="12dp"
                    android:text="Run By Week"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/weekActivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="12dp"
                    android:paddingLeft="15dp"
                    android:text="activate" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="Week Days"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    app:singleSelection="false">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/monday"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/monday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true"
                        app:chipIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/tuesday"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/tuesday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/wednesday"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/wednesday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true"
                        app:chipIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/thursday"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/thursday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/friday"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/friday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true"
                        app:chipIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sat"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/saturday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sun"
                        style="@style/ChipsColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/sunday"
                        android:textSize="16sp"
                        app:checkedIconEnabled="true" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="From"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fromWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="12dp"
                    android:text="00:00"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="to"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/toWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="12dp"
                    android:text="00:00"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>